@@ -22,17 +22,18 @@ import com.martiansoftware.jsap.JSAPException;
 import com.martiansoftware.jsap.JSAPResult;
 import edu.cornell.med.icb.goby.alignments.AlignmentReader;
 import edu.cornell.med.icb.goby.alignments.Alignments;
+import edu.cornell.med.icb.identifier.IndexedIdentifier;
 import it.unimi.dsi.fastutil.chars.CharArrayList;
 import it.unimi.dsi.fastutil.floats.FloatArrayList;
-import it.unimi.dsi.fastutil.ints.IntArrayList;
-import it.unimi.dsi.fastutil.ints.IntList;
-import it.unimi.dsi.fastutil.ints.IntOpenHashSet;
-import it.unimi.dsi.fastutil.ints.IntSet;
-import it.unimi.dsi.fastutil.io.TextIO;
+import it.unimi.dsi.fastutil.objects.Object2IntOpenHashMap;
+import it.unimi.dsi.fastutil.objects.Object2IntMap;
+import it.unimi.dsi.fastutil.ints.*;
 import it.unimi.dsi.logging.ProgressLogger;
+import it.unimi.dsi.lang.MutableString;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.Map;
 
 /**
  * Report differences between two alignment files.
@@ -132,6 +133,15 @@ public class DiffAlignmentMode extends AbstractGobyMode {
 
         int readerIndex = 0;
 
+        // Map the target indexes of the SECOND alignment to the first
+        Object2IntMap<MutableString> masterTargetNameToIndexMap = new Object2IntOpenHashMap<MutableString>();
+        Int2ObjectOpenHashMap<MutableString> masterTargetIndexToNameMap = new Int2ObjectOpenHashMap<MutableString>();
+        Int2IntMap[] targetsIndexesToMasterMap = new Int2IntMap[2];
+        targetsIndexesToMasterMap[0] = addIdentiersToMaster(
+                masterTargetNameToIndexMap, masterTargetIndexToNameMap, readerA.getTargetIdentifiers());
+        targetsIndexesToMasterMap[1] = addIdentiersToMaster(
+                masterTargetNameToIndexMap, masterTargetIndexToNameMap, readerB.getTargetIdentifiers());
+
         for (final AlignmentReader reader : readers) {
             queryMultiplicity[readerIndex].size(reader.getNumberOfQueries());
             targetIndices[readerIndex].size(reader.getNumberOfQueries());
@@ -144,7 +154,8 @@ public class DiffAlignmentMode extends AbstractGobyMode {
                 queryIndices[readerIndex].add(queryIndex);
 
                 queryMultiplicity[readerIndex].set(queryIndex, entry.getMultiplicity());
-                targetIndices[readerIndex].set(queryIndex, entry.getTargetIndex());
+                targetIndices[readerIndex].set(
+                        queryIndex, targetsIndexesToMasterMap[readerIndex].get(entry.getTargetIndex()));
                 scores[readerIndex].set(queryIndex, entry.getScore());
                 positions[readerIndex].set(queryIndex, entry.getPosition());
                 strands[readerIndex].set(queryIndex, entry.getMatchingReverseStrand() ? '-' : '+');
@@ -161,7 +172,7 @@ public class DiffAlignmentMode extends AbstractGobyMode {
         double percentCommon = commonQueryIndices.size();
         percentCommon /= (double) Math.max(queryIndices[0].size(), queryIndices[1].size());
         percentCommon *= 100;
-        System.out.printf("%3.5g %% of query indices match between the two alignments.", percentCommon);
+        System.out.printf("%3.5g %% of query indices match between the two alignments.%n", percentCommon);
         // check multiplicity and target Index for common indices:
 
         for (final int commonQueryIndex : commonQueryIndices) {
@@ -169,48 +180,107 @@ public class DiffAlignmentMode extends AbstractGobyMode {
             final int secondMultiplicity = queryMultiplicity[1].getInt(commonQueryIndex);
             if (firstMultiplicity != secondMultiplicity) {
                 System.out.printf("Entry queryIndex=%d has different multiplicity between "
-                        + "the two alignments (first=%d, second=%d).  ", commonQueryIndex,
+                        + "the two alignments (first=%d, second=%d).%n", commonQueryIndex,
                         firstMultiplicity, secondMultiplicity);
             }
             final int firstTargetIndex = targetIndices[0].getInt(commonQueryIndex);
             final int secondTargetIndex = targetIndices[1].getInt(commonQueryIndex);
             if (firstTargetIndex != secondTargetIndex) {
                 System.out.printf("Entry queryIndex=%d has different targetIndex between "
-                        + "the two alignments (first=%d, second=%d).  ", commonQueryIndex,
-                        firstTargetIndex, secondTargetIndex);
+                        + "the two alignments (first=%s, second=%s).%n", commonQueryIndex,
+                        masterTargetIndexToNameMap.get(firstTargetIndex),
+                        masterTargetIndexToNameMap.get(secondTargetIndex));
             }
 
             final float firstScore = scores[0].getFloat(commonQueryIndex);
             final float secondScore = scores[1].getFloat(commonQueryIndex);
             if (firstScore != secondScore) {
                 System.out.printf("Entry queryIndex=%d has different score between "
-                        + "the two alignments (first=%g, second=%g).  ", commonQueryIndex,
+                        + "the two alignments (first=%g, second=%g).%n", commonQueryIndex,
                         firstScore, secondScore);
             }
         }
 
         if (commonQueryIndices.size() != Math.max(queryIndices[0].size(), queryIndices[1].size())) {
+            System.out.println("--- Unique to A ----------");
             final IntSet setA = queryIndices[0];
             final IntList uniqueToFirst = uniqueTo(commonQueryIndices, setA, "first");
             printEntries(uniqueToFirst, targetIndices[0], queryMultiplicity[0], scores[0],
-                    positions[0], strands[0]);
+                    positions[0], strands[0], masterTargetIndexToNameMap);
+            System.out.println("--- Unique to B ----------");
             final IntSet setB = queryIndices[1];
             final IntList uniqueToSecond = uniqueTo(commonQueryIndices, setB, "second");
             printEntries(uniqueToSecond, targetIndices[1], queryMultiplicity[1], scores[1],
-                    positions[1], strands[1]);
+                    positions[1], strands[1], masterTargetIndexToNameMap);
+            System.out.println("--- Common to A and B ----");
+            printCommonEntries(commonQueryIndices,  targetIndices, queryMultiplicity, scores, positions, strands,
+                    masterTargetIndexToNameMap);
 
         }
         progress.stop();
     }
 
-    private void printEntries(final IntList queryIndices, final IntArrayList targetIndices, final IntArrayList multiplicity,
-                              final FloatArrayList scores, final IntArrayList positions, final CharArrayList strands) {
+    private Int2IntMap addIdentiersToMaster(
+            final Object2IntMap<MutableString> masterTargetNameToIndexMap,
+            final Int2ObjectMap<MutableString> masterTargetIndexToNameMap,
+            final IndexedIdentifier targetIdents) {
+        Int2IntMap targetsToMasterMap = new Int2IntOpenHashMap();
+        int nextIndex = masterTargetNameToIndexMap.size();
+        for (Map.Entry<MutableString, Integer> entry : targetIdents.entrySet()) {
+            Integer existingIndex = masterTargetNameToIndexMap.get(entry.getKey());
+            if (existingIndex == null) {
+                masterTargetNameToIndexMap.put(entry.getKey(), nextIndex);
+                masterTargetIndexToNameMap.put(nextIndex, entry.getKey());
+                targetsToMasterMap.put((int) entry.getValue(), nextIndex);
+                nextIndex++;
+            } else {
+                targetsToMasterMap.put((int) entry.getValue(), (int) existingIndex);
+            }
+        }
+        return targetsToMasterMap;
+    }
+
+    private void printEntries(
+            final IntList queryIndices, final IntArrayList targetIndices, final IntArrayList multiplicity,
+            final FloatArrayList scores, final IntArrayList positions, final CharArrayList strands,
+            final Int2ObjectMap<MutableString> masterTargetIndexToNameMap) {
         for (final int queryIndex : queryIndices) {
-            System.out.printf("[entry queryIndex=%d targetIndex=%d multiplicity=%d score=%g position=%d strand=%c] %n", queryIndex,
-                    targetIndices.get(queryIndex),
+            System.out.printf("[entry queryIndex=%d target=%s multiplicity=%d score=%g position=%d strand=%c]%n",
+                    queryIndex, masterTargetIndexToNameMap.get(targetIndices.get(queryIndex)),
                     multiplicity.get(queryIndex), scores.get(queryIndex),
                     positions.get(queryIndex), strands.get(queryIndex));
         }
+    }
+
+    private void printCommonEntries(
+            final IntSet queryIndicesSet,
+            final IntArrayList[] targetIndices, final IntArrayList[] multiplicity,
+            final FloatArrayList[] scores, final IntArrayList[] positions, final CharArrayList[] strands,
+            final Int2ObjectMap<MutableString> masterTargetIndexToNameMap) {
+        IntList queryIndices = new IntArrayList(queryIndicesSet.size());
+        queryIndices.addAll(queryIndicesSet);
+        Collections.sort(queryIndices);
+        long exactMatches = 0;
+        for (final int queryIndex : queryIndices) {
+            // Check for exact match, disregarding score
+            if ((targetIndices[0].get(queryIndex).equals(targetIndices[1].get(queryIndex))) &&
+                    (multiplicity[0].get(queryIndex).equals(multiplicity[1].get(queryIndex))) &&
+                    (positions[0].get(queryIndex).equals(positions[1].get(queryIndex))) &&
+                    (strands[0].get(queryIndex) == strands[1].get(queryIndex))) {
+                exactMatches++;
+            } else {
+                System.out.printf("[entry queryIndex=%d target=%s multiplicity=%d score=%g position=%d strand=%c%n",
+                        queryIndex, masterTargetIndexToNameMap.get(targetIndices[0].get(queryIndex)),
+                        multiplicity[0].get(queryIndex), scores[0].get(queryIndex),
+                        positions[0].get(queryIndex), strands[0].get(queryIndex));
+                System.out.printf(" entry queryIndex=%d target=%s multiplicity=%d score=%g position=%d strand=%c]%n",
+                        queryIndex, masterTargetIndexToNameMap.get(targetIndices[1].get(queryIndex)),
+                        multiplicity[1].get(queryIndex), scores[1].get(queryIndex),
+                        positions[1].get(queryIndex), strands[1].get(queryIndex));
+            }
+        }
+        System.out.printf("Disregarding score, there were %d exact matches and %d inexact matches.%n",
+                exactMatches, queryIndices.size() - exactMatches);
     }
 
     private IntList uniqueTo(final IntSet commonQueryIndices, final IntSet a, final String label) {
@@ -220,8 +290,7 @@ public class DiffAlignmentMode extends AbstractGobyMode {
         final IntList sorted = new IntArrayList();
         sorted.addAll(queryIndicesUniqueToA);
         Collections.sort(sorted);
-        System.out.println("The following query indices are unique to the " + label + " alignment: ");
-        TextIO.storeInts(sorted.toIntArray(), System.out);
+        System.out.printf("The %s alignment contained %d unique query indicies%n", label, sorted.size());
         return sorted;
     }
 
